Listar personas corregido a medias.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Testing
-
+server.port=8081
 
 spring.datasource.url = jdbc:mysql:shinkansen.proxy.rlwy.net:19447/railway
 spring.datasource.username= root
