--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Testing
 
-spring.datasource.url = jdbc:mysql:shinkansen.proxy.rlwy.net:19447/railway
-spring.datasource.username= root
-spring.datasource.password=GyfQLZCHyJOrRYVKQXIwsGXCnndgLYSw
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
