--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=Testing
-
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+# application.properties
+spring.datasource.url=jdbc:mysql://shinkansen.proxy.rlwy.net:19447/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=GyfQLZCHyJOrRYVKQXIwsGXCnndgLYSw
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
